--- a/Assets/Resources/UIDocuments/SettlementScreen/SettlementScreen.uxml
+++ b/Assets/Resources/UIDocuments/SettlementScreen/SettlementScreen.uxml
@@ -1,15 +1,16 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/Resources/UIDocuments/SettlementScreen/SettlementScreenStyle.uss?fileID=7433441132597879392&amp;guid=d485db79f543bcd4b9557aeedc9a6cb5&amp;type=3#SettlementScreenStyle" />
     <engine:VisualElement style="flex-grow: 1; align-items: center; justify-content: center;">
-        <engine:VisualElement picking-mode="Ignore" name="Wrapper" style="width: 90%; height: 90%; justify-content: space-around;">
-            <engine:VisualElement name="VictoryBackground" style="flex-grow: 1; background-image: resource(&apos;2d_chouxifan/21&apos;); left: 0; bottom: 0; position: absolute; width: 699px; height: 514px;" />
-            <engine:VisualElement style="align-items: center;">
-                <engine:Label text="恭喜你活下来了" name="Title" />
+        <engine:VisualElement picking-mode="Ignore" name="Wrapper" style="width: 666px; height: 549px; justify-content: space-around;">
+            <engine:VisualElement name="VictoryBackground" style="flex-grow: 1; background-image: resource(&apos;Images/UI/Settlement/VictoryBackground&apos;); left: -39px; bottom: 0; position: absolute; top: -31px; right: 0;" />
+            <engine:VisualElement name="DefeatBackground" style="flex-grow: 1; background-image: resource(&apos;Images/UI/Settlement/DefeatBackground&apos;); left: 0; bottom: 0; position: absolute; top: 0; right: 0;" />
+            <engine:VisualElement style="flex-grow: 1; position: absolute; top: 50px; left: 0; right: 0; align-items: center; justify-content: center; height: 123px;">
+                <engine:Label text="遗憾，你没有活到最后" name="Title" style="width: 313px; white-space: normal; -unity-text-align: middle-center; color: rgb(202, 177, 148); font-size: 40px; margin-left: 12px;" />
             </engine:VisualElement>
-            <engine:VisualElement style="height: 489px;">
+            <engine:VisualElement style="position: absolute; top: 188px; left: 0; right: 0; display: none;">
                 <engine:Label text="在本次旅途中，你砍了x棵树" name="Settlement" />
             </engine:VisualElement>
-            <engine:VisualElement style="flex-direction: row; justify-content: space-around;">
+            <engine:VisualElement style="position: absolute; right: -16px; bottom: 66px;">
                 <engine:Button text="再来一局" name="RestartGame" />
                 <engine:Button text="退出游戏" name="ExitGame" />
             </engine:VisualElement>
